# DeepFilterNet3-maven

./: .gitignore  .gitmodules
.github/workflows/: build-android-release.yml
android/: .gitignore  AUDIO_PROCESSOR_GUIDE.md  BUILD_GUIDE.md  BUILD_SCRIPT_CLEANUP.md  BUILD_SYSTEM_OPTIMIZATION.md  BUILD_VERIFICATION.md  CHECKLIST.md  CROSS_COMPILE_SUMMARY.md  ENDIANNESS_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.gradle  build.gradle.kts  settings.gradle.kts  test_endianness.sh
android/deepfilter/: build.gradle  proguard-rules.pro
android/deepfilter/src/main/cpp/: CMakeLists.txt
android/deepfilter/src/main/cpp/include/: AudioProcessor.h
android/deepfilter/src/main/cpp/src/: AudioProcessor.cpp  jni_interface.cpp
android/deepfilter/src/main/cpp/test/: CMakeLists.txt  endianness_test.cpp
android/deepfilter/src/main/java/com/hzexe/audio/ns/: AudioProcessor.java  AudioProcessorTest.java  DeepFilterNet.java
deepfilter-ort/: Cargo.toml
deepfilter-ort/src/: lib.rs
deepfilter-ort/test/: endianness_test.rs
