[package]
name = "deepfilter-ort"
version = "0.1.0"
edition = "2021"

[dependencies]
# 本地依赖：DeepFilterNet libDF
deep_filter = { path = "../DeepFilterNet/libDF", features = ["tract"] }

# Tract 框架依赖（用于 ONNX 模型推理）
tract-core = "^0.19.4"
tract-onnx = "^0.19.4"
tract-pulse = "^0.19.4"
tract-hir = "^0.19.4"

# 数值计算和数组处理
ndarray = "^0.15"
itertools = "0.10"

# 错误处理
anyhow = "1.0"

# 压缩和解压缩
flate2 = "1.0"
tar = "0.4"

# 配置文件解析
rust-ini = "^0.19"

# JNI 接口
jni = "0.20"

[lib]
name = "deepfilter_ort"
path = "src/lib.rs"
crate-type = ["cdylib"]
